keycloak/ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: keycloak-ingress
spec:
  tls:
    - hosts:
      - kustomizeMe
      secretName: letsencrypt-certificate
  rules:
    - host: kustomizeMe
      http:
        paths:
        - path: /
          backend:
            serviceName: keycloak-http
            servicePort: 80
